Change the success notifications to read Property Rate .... rather than Property .... apply an input mask to the three numeric fields The warning message from the server is not showing, it should be displayed above the listing and below the title Rates for ... If I am editing a rate and click on 'Add Rate' the edit is cancelled, can the save be attempted on this or can the 'Add Rate' button be disabled when in edit mode.

--- a/app/pages/properties/setrates/setrates.component.css
+++ b/app/pages/properties/setrates/setrates.component.css
@@ -37,3 +37,12 @@
 .danger{
 	color:red;
 }
+.datepicker{
+	width: 86% !important;
+}
+.date-err{
+	background-image: linear-gradient(#f44336, #f44336),linear-gradient(#f44336, #f44336);
+}
+.tool-tip-err{
+	line-height: 36px;
+}
