DAS-112 #added buttons to add property screen

--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -132,6 +132,7 @@
                     </div>
                     <div class="col-xs-8">
                         <button id="wizard-form" class="btn btn-success pull-right font-16 m-r-20 p-l-r-20" type="submit" [disabled]="sending">Save & Close</button>
+                        <button *ngIf="!permission" class="btn btn-success pull-right m-r-20 p-l-r-20 font-16" type="button" [disabled]="propertyForm.invalid"  (click)="onSubmit()">Save & Continue</button>
                         <div class="togglebutton pull-right">
                             <label>
                                 <input type="checkbox" formControlName="Active" *ngIf="isLoad"> Active status
