--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -139,7 +139,7 @@
                     </div>
                     <div class="col-xs-8">
                         <button id="wizard-form" *ngIf="!permission" class="btn btn-success pull-right m-r-20 p-l-r-20 font-16" type="button" [disabled]="propertyForm.invalid" (click)="onSubmit(true)">Save & Close</button>
-                        <!--<button *ngIf="!permission" class="btn btn-success pull-right m-r-20 p-l-r-20 font-16" type="button" [disabled]="propertyForm.invalid"  (click)="onSubmit()">Save & Continue</button>-->
+                        <button *ngIf="!permission" class="btn btn-success pull-right m-r-20 p-l-r-20 font-16" type="button" [disabled]="propertyForm.invalid"  (click)="onSubmit()">Save & Continue</button>
                         <div class="togglebutton pull-right">
                             <label>
                                 <input type="checkbox" formControlName="Active" *ngIf="!propertiesService.isReading"> Active status
