When adding a new rate, if I click the X to cancel it, the rate is still shown in the list. When adding a new rate, there are defaults set in commission and fees, these should be blank. I still see the dates on two lines, one line for the icon and one for the input itself (when adding or editing a rate). Can you change Commission Percentage to read Commission % so that it fits on one line? Tooltip errors are showing, good work, but is it possible to show the error one line? Currently showing on two lines. The tooltip for invalid percentage displays different to the tooltip for date overlap. Can we make these the same?

--- a/app/pages/properties/setrates/setrates.component.css
+++ b/app/pages/properties/setrates/setrates.component.css
@@ -37,10 +37,10 @@
 .danger{
 	color:red;
 }
-.datepicker{
+.datepicker-max-86{
 	width: 86% !important;
 }
-.date-err{
+.data-err{
 	background-image: linear-gradient(#f44336, #f44336),linear-gradient(#f44336, #f44336);
 }
 .tool-tip-err{
