--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -728,6 +728,7 @@ div.dataTables_wrapper div.dataTables_paginate {
 }
 setrates-cmp popover-content .popover.bottom .popover-content{
 	white-space: nowrap !important;
+	display: flex !important;
 }
 setrates-cmp popover-content .popover.bottom .popover-content i.material-icons{
 	vertical-align: middle !important;
